c/examples/writing-a-c-compiler-tests/tests/chapter_9/invalid_labels/extra_credit/goto_function.c
int foo(void) {
    return 3;
}

int main(void) {
    /* You can't use a function name as a goto label */
    goto foo;
    return 3;
}